--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,14 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="CSINOUT" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="mastercsconcepts" />
+    <link rel="shortcut icon" href="./fav.png" type="image/png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
       rel="stylesheet"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!-- <title>Alumini Portal</title> -->
-    <title>csinout</title>
+    <title>mastercsconcepts</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
